# python-cli-boilerplate

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  Makefile  README.md  config.py  main.py  pyproject.toml  ruff.toml
commands/: __init__.py  command_one.py  command_two.py
config/: config.py  settings.py
constants/: __init__.py  general.py
models/: __init__.py  typer_metadata.py
utils/: __init__.py  extensions.py  general.py  logging.py
